[package]
name = "gg"
version = "0.1.0"
authors = [
    "Zageron <hello@adambryant.ca>",
    "Aztek <andrew.cc.osborne@gmail.com>",
    "Rael <callum.mcrae5@gmail.com>",
]
edition = "2018"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "f69cc6f94c9df675457b56297d582c16b5d37cef" }
rand = "0.7.3"
ezing = "0.2.1"
